fix spacing

--- a/code/static/css/style.css
+++ b/code/static/css/style.css
@@ -1,8 +1,4 @@
 
-#check label {
-    float:left;
-}
-
 
 body {
     font-family: "Roboto", sans-serif;
